@@ -1,4 +1,6 @@
 master
+- noface
+  Added new function 'Remove Spoilers'.
 
 2.37.3
 - Mayhem
